--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eslint-config-next": "13.2.1",
     "framer-motion": "^10.0.1",
     "next": "13.2.1",
+    "next-i18next": "^15.3.1",
+    "next-intl": "^3.17.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
