--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "framer-motion": "^10.18.0",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "next-i18next": "^15.3.1",
     "next-intl": "^3.17.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.7.1",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
