--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "animejs": "^3.2.1",
+    "clsx": "^2.1.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "framer-motion": "^10.18.0",
     "next": "^14.2.5",
+    "next-intl": "^3.17.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.7.1",
