--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^4.7.1",
     "sass": "^1.58.3",
-    "typescript": "4.9.5"
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.7"
